--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Reema Roy | About</title>
+  <meta name="description" content="Reema Roy provides IT consulting, data migration, website development, and shares trusted skincare, travel & tech     recommendations through blogs and YouTube.">
+  <meta name="author" content="Reema Roy">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://www.reemaroy.com/">
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Reema Roy | IT Consultant & Digital Creator">
+  <meta property="og:description" content="IT consulting, website development, and trusted skincare, travel & tech recommendations by Reema Roy.">
+  <meta property="og:url" content="https://www.reemaroy.com/">
+  <meta property="og:image" content="https://www.reemaroy.com/assets/img/profile/profile-2.webp">
+  <meta property="og:site_name" content="Reema Roy">
+  
+  <!-- TWITTER -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Reema Roy | IT Consultant & Digital Creator">
+  <meta name="twitter:description" content="IT consulting, data migration, website development & lifestyle recommendations.">
+  <meta name="twitter:image" content="https://www.reemaroy.com/assets/img/profile/profile-2.webp">
+
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
+</head>
+
+<body class="index-page">
+  <header id="header" class="header dark-background d-flex flex-column justify-content-center">
+    <i class="header-toggle d-xl-none bi bi-list"></i>
+
+    <div class="header-container d-flex flex-column align-items-start">
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+          <li><a href="/about"><i class="bi bi-person navicon"></i> About</a></li>
+          <li><a href="/resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+          <li><a href="/portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
+          <li><a href="/services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+          <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="/youtube">YouTube</a></li>
+              <li><a href="/blogs">Blogs</a></li>
+              <li><a href="/wishlist">Wishlist</a></li>
+            </ul>
+          </li>
+          <li><a href="/contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
+        </ul>
+      </nav>
+
+      <div class="social-links text-center">        
+        <a href="https://www.linkedin.com/in/iamreemaroy/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.youtube.com/@iamreemaroy" class="google-plus"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.instagram.com/iamreemaroyy" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://x.com/iamreemaroy" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://linktr.ee/iamreemaroy" class="facebook"><i class="bi bi-cart4"></i></a>
+      </div>
+
+    </div>
+  </header>
+  <main class="main">
+  
+  </main>
+
+  <div id="footer-placeholder"></div>
+
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Main JS File -->
+  <script src="assets/js/main.js" defer></script>
+
+</body>
+
+</html>
