--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Reema Roy | About</title>
-  <meta name="description" content="Reema Roy provides IT consulting, data migration, website development, and shares trusted skincare, travel & tech     recommendations through blogs and YouTube.">
+  <title>About Reema Roy | Technical Project Manager & Website Consultant</title>
+  <meta name="description" content="Learn about Reema Roy, a Technical Project Manager and Website Consultant specializing in website development, migration, and business-focused digital solutions.">
   <meta name="author" content="Reema Roy">
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
@@ -49,6 +49,7 @@
 </head>
 
 <body class="index-page">
+  
   <header id="header" class="header dark-background d-flex flex-column justify-content-center">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
@@ -81,8 +82,156 @@
 
     </div>
   </header>
-  <main class="main">
   
+  <main class="main">
+    <!-- About Section -->
+    <section id="about" class="about section">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row">
+          <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="200">
+            <div class="profile-card">
+              <div class="profile-header">
+                <div class="profile-image">
+                  <img src="assets/img/profile/profile-square-3.webp" alt="Profile Image" class="img-fluid">
+                </div>
+                <div class="profile-badge">
+                  <i class="bi bi-check-circle-fill"></i>
+                </div>
+              </div>
+
+              <div class="profile-content">
+                <h3>Reema Roy</h3>
+                <p class="profession">Project Manager & Content Creator</p>
+
+                <div class="contact-links">
+                  <a href="mailto:marcus@example.com" class="contact-item">
+                    <i class="bi bi-envelope"></i>
+                    royreema1997@gmail.com
+                  </a>
+                  <a href="tel:+15551234567" class="contact-item">
+                    <i class="bi bi-telephone"></i>
+                    +91 9210481163
+                  </a>
+                  <a href="#" class="contact-item">
+                    <i class="bi bi-geo-alt"></i>
+                    Hyderabad, TG, India
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
+            <div class="about-content">
+              <div class="section-header">
+                <span class="badge-text">About me</span>
+              </div>
+
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+                <h1>About Reema Roy</h1>
+                <p><b>Reema Roy</b> is a <b>Technical Project Manager and Website Consultant</b> with hands-on experience in website development, data migration, domain and hosting setup, and business-focused technical consulting.</p>
+                <p>She works with startups, founders, and growing businesses to build reliable digital systems, manage technical delivery, and ensure websites perform smoothly, securely, and at scale.</p>
+              </div>
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+                <h2>Professional Summary</h2>
+                <p>Reema has over 6+ years of experience working across technology, delivery, and digital platforms. Her strength lies in bridging the gap between business goals and technical execution.</p>
+                <p>She has managed end-to-end website projects — from planning and domain purchase to development, migration, and post-launch optimization — while coordinating with developers, designers, and stakeholders.</p>
+                <p>Her work focuses on:</p>
+                <li>Clear project execution</li>
+                <li>Scalable website architecture</li>
+                <li>Practical, business-aligned solutions</li>
+            </div>
+
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+                <h2>What I Do</h2>
+                <h4>Website Development & Migration</h4>
+                  <li>Static and CMS-based websites</li>
+                  <li>Website performance improvements</li>
+                  <li>Data and content migration</li>
+                  <li>Hosting and platform transitions</li>
+                <h4>Technical Project Management</h4>
+                  <li>Website and digital project delivery</li>
+                  <li>Timeline, scope, and risk management</li>
+                  <li>Cross-functional team coordination</li>
+                  <li>Client and stakeholder communication</li>
+                <h4>Business & Website Consulting</h4>
+                  <li>Website audits and improvement plans</li>
+                  <li>Domain and hosting consultation</li>
+                  <li>Technical decision-making support</li>
+                  <li>Process and system optimization</li>
+            </div>
+
+
+            <div class="description" style="padding-left: 12px;padding-right: 12px;">
+              <h2>Tools & Platforms I’ve Worked With</h2>
+                <li>GitHub & GitHub Pages</li>
+                <li>WordPress & CMS platforms</li>
+                <li>Hosting providers & domain registrars</li>
+                <li>Website analytics & SEO tools</li>
+                <li>Project management tools (Agile / delivery workflows)</li>
+            </div>
+
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+              <h2>Project Experience</h2>
+                <p>Reema has contributed to multiple website and digital projects across different business stages. Some projects are no longer publicly accessible due to client-side business decisions or operational changes, but her role included:</p>
+                <li>Project planning and execution</li>
+                <li>Technical coordination and delivery</li>
+                <li>Website setup, migration, and launch</li>
+                <p>This experience reflects real-world project environments and delivery challenges.</p>
+                <p>✔ This protects you legally <br>
+                ✔ Still boosts credibility</p>
+            </div>
+
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+              <h2>Content & Knowledge Sharing</h2>
+              <p>Reema also creates content to share practical insights on:</p>
+                <li>Websites and digital systems</li>
+                <li>Technical project management</li>
+                <li>Business and technology alignment</li>
+              <p>She actively shares knowledge through:</p>
+                <li>YouTube videos</li>
+                <li>Professional networking platforms</li>
+              <p>This reinforces her role as a practitioner + educator.</p>
+            </div>
+
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+              <h2>How I Work</h2>
+              <p>Reema believes in:</p>
+                <li>Clear communication over assumptions</li>
+                <li>Structured execution over chaos</li>
+                <li>Sustainable solutions over quick fixes</li>
+              <p>Her approach combines technical understanding with business clarity to deliver outcomes that actually work in real environments.</p>
+            </div>
+
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+              <h2>Work With Me</h2>
+              <p>If you’re looking for support with:</p>
+                <li>Website development or migration</li>
+                <li>Technical project management</li>
+                <li>Website or business consulting</li>
+              <p>You can explore services or connect directly to discuss your requirements.</p>
+                👉 Link to Services
+                👉 Link to Contact
+            </div>
+
+
+
+
+
+
+
+
+
+              
+          </div>
+        </div>
+
+      </div>
+
+    </section><!-- /About Section -->
+    
   </main>
 
   <div id="footer-placeholder"></div>
